# lark-drive-sync

./: .export_candidates.pid  .gitignore  .verify_before_trash.pid  README.md  pyproject.toml  vps_sync.sh
reports/: colored_folders.csv  delete_batches_log.csv  delete_candidates.csv  failed_items.csv  mappings.csv  unresolved_failed_items.csv  verification_failed.csv  verified_ok.csv
reports/drives/nuoiemmedia/: delete_batches_log.csv  protected_folder_names.txt
reports/drives/sucmanh2000/: failed_items.csv  mappings.backup.before-root-switch.csv  mappings.csv
src/migration/: __init__.py  cleanup_lark_duplicate_roots.py  cli.py  config.py  export_delete_candidates.py  lark_user_oauth.py  models.py  paths.py  plan_top_level_batches.py  real_adapters.py  report_colored_folders.py  simple_sync.py  trash_google_batches.py  verify_before_trash.py  wipe_lark_roots.py
