[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-drive-sync"
version = "0.1.0"
description = "Manifest-driven Google Drive to Lark migration toolkit"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
drive-migrate = "migration.cli:main"

